--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" data-websiteId="101"></div>
+    <div id="root" data-websiteId="101" data-apiUrl="https://api.ci.gttsdev5.com"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
