--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" data-websiteId="101" data-apiUrl="https://api.ci.gttsdev5.com" data-paymentGateway="intuit" data-merchantId="05276773952962660269"></div>
+    <div id="root" data-websiteId="101" data-apiUrl="https://api.ci.gttsdev5.com" data-paymentGateway="braintree" data-merchantId="05276773952962660269"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
