--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       data-merchantId="05276773952962660269"
       data-turnstile_sitekey="0x4AAAAAAA60YPGP0nFNxuKR"
       data-countyEnabled="yes"
+      data-edgeURL="https://zhlbk.driveredtogo.com"
     ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
