Raw registration-2, add loader

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <div
       id="root"
-      data-websiteId="201"
+      data-websiteId="101"
       data-apiUrl="https://api.ci.gttsdev5.com"
-      data-paymentGateway="braintree"
+      data-paymentGateway="intuit"
       data-merchantId="05276773952962660269"
       data-turnstile_sitekey="0x4AAAAAAA60YPGP0nFNxuKR"
-      data-countyEnabled="yes"
+      data-hmacPublicKey="REVURw=="
+      data-countyEnabled="no"
       data-edgeURL="https://zhlbk.driveredtogo.com"
     ></div>
     <script type="module" src="/src/main.jsx"></script>
